--- a/SEMC/SEMC/Info.plist
+++ b/SEMC/SEMC/Info.plist
@@ -36,10 +36,43 @@
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SFProText-Medium.ttf</string>
+		<string>SFProText-Heavy.ttf</string>
+        <string>SFProDisplay-UltraLight.ttf</string>
+        <string>SFProDisplay-RegularItalic.ttf</string>
+        <string>SFProDisplay-SemiboldItalic.ttf</string>
+        <string>SFProText-RegularItalic.ttf</string>
+        <string>SFProText-SemiBold.ttf</string>
+        <string>SFProText-Regular.ttf</string>
+        <string>SFProDisplay-BoldItalic.ttf</string>
+        <string>SFProDisplay-Medium.ttf</string>
+        <string>SFProDisplay-Black.ttf</string>
+        <string>SFProText-BoldItalic.ttf</string>
+        <string>SFProText-MediumItalic.ttf</string>
+        <string>SFProText-LightItalic.ttf</string>
+        <string>SFProText-Light.ttf</string>
+        <string>SFProDisplay-ThinItalic.ttf</string>
+        <string>SFProText-HeavyItalic.ttf</string>
+        <string>SFProDisplay-Light.ttf</string>
+        <string>SFProDisplay-Regular.ttf</string>
+        <string>SFProDisplay-BlackItalic.ttf</string>
+        <string>SFProText-SemiBoldItalic.ttf</string>
+        <string>SFProDisplay-MediumItalic.ttf</string>
+        <string>SFProDisplay-Bold.ttf</string>
+        <string>SFProText-Bold.ttf</string>
+        <string>SFProDisplay-HeavyItalic.ttf</string>
+        <string>SFProDisplay-SemiBold.ttf</string>
+        <string>SFProDisplay-Heavy.ttf</string>
+        <string>SFProDisplay-LightItalic.ttf</string>
+        <string>SFProDisplay-UltralightItalic.ttf</string>
+        <string>SFProDisplay-Thin.ttf</string>
 	</array>
 </dict>
 </plist>
